<resources>
    <string name="app_name">WM Android UI</string>
    <string name="paypal">Paypal</string>
    <string name="carte_bancaire">Carte Bancaire</string>
    <string name="veuillez_selectionner_le_mode_de_paiement">Veuillez selectionner le mode de paiement:</string>
    <string name="prix_total_257_99">Prix Total : 257,99€</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="fermer">FERMER</string>
    <string name="fb_partage">Partager sur Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="ok">OK</string>
</resources>
